src/frontend/ts/tests/fixtures/invalid_modifiers/attribute.cloesce.ts
// @ts-nocheck
// InvalidAttributeModifier

@D1
export class Foo {
  @PrimaryKey
  private id: number;
}
